# fixtures-for-schedules

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
example/example/: settings.py
example/schedules/: apps.py  models.py
example/schedules/migrations/: 0001_initial.py
tests/: test_schedule.py  test_schedule_iterator.py
