[tool.poetry]
name = "fixtures-for-schedules"
version = "0.1.0"
description = ""
authors = ["Matthew de Verteuil <onceuponajooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0"
pytest = "^5.3"
pytest-django = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
