[tool.poetry]
name = "fixtures-for-schedules"
version = "0.1.0"
description = ""
authors = ["Matthew de Verteuil <onceuponajooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0"
pytest = "^5.3"
pytest-django = "^3.7"
pytest-cov = "^2.8"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | (?!\d{4}_).*\.py
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_django = "django"
known_pandas = "pandas,numpy"
known_third_party = ["django", "pytest", "schedules"]
line_length = 120
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,PANDAS,FIRSTPARTY,LOCALFOLDER"
use_parentheses = true
verbose = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
